Fixed spacing between the new card and nav.

--- a/client/scss/partials/_newCard.scss
+++ b/client/scss/partials/_newCard.scss
@@ -1,5 +1,8 @@
 //	NewCard Component
 #newCard {
+	position: relative;
+	top: 2rem;
+	margin-top: 1.5rem;
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: center;
